deploy/kubernetes/base/nextjs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextjs-app
  namespace: zaringold
  labels:
    app.kubernetes.io/name: zaringold
    app.kubernetes.io/component: nextjs
    app.kubernetes.io/part-of: zaringold
    app.kubernetes.io/service: nextjs-app
spec:
  type: ClusterIP
  publishNotReadyAddresses: false
  sessionAffinity: None
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
      appProtocol: http
  selector:
    app.kubernetes.io/name: zaringold
    app.kubernetes.io/component: nextjs
